<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SMILCloud</string>
	
    <!-- menu stuff -->
    <string name="library_menu">My Library</string>
    <string name="exit_player_menu">Exit</string>
    <string name="create_message">Create New Video</string>
    
    <string name="created_messages_title">Created Messages</string>
    <string name="inbox_title">Inbox</string>
    
    <!-- composer menu strings -->
    <string name="add_audio_menu">Add Audio</string>
    <string name="add_image_menu">Add Image</string>
    <string name="add_text_menu">Add Text</string>
    <string name="add_video_menu">Add Video</string>
    <string name="save_send_menu">Save/Send</string>
    <string name="save_menu">Save</string>
    <string name="send_menu">Send</string>
    <string name="preview_menu">Preview</string>
    
    <!-- region editor menu strings -->
    <string name="bring_forward_menu">Bring Forward</string>
    <string name="push_back_menu">Push Back</string>
    
    <!-- media browser strings -->
    <string name="audio_no_items">No audio available.</string>
    <string name="image_no_items">No images available.</string>
    <string name="video_no_items">No video available.</string>
    
    <!-- message name prompt strings -->
    <string name="name_msg_prompt">Name this message:</string>
    <string name="name_msg_cancel">Cancel</string>
    <string name="name_msg_accept">Accept</string>
    
</resources>
